# jinja-apia470eedc-9f2e-4927-b998-5b96e5419de1

./: .env.example  README.md  pyproject.toml  schema.prisma
project/: generate_bill_service.py  generate_invoice_service.py  generate_receipt_service.py  server.py
