[tool.poetry]
name = "jinja-api"
version = "0.1.0"
description = "To create an API that serves HTML print formatted documents like bills, invoices, and receipts utilizing the Jinja package, follow these steps:"
authors = ["AutoGPT <info@agpt.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = "^0.68.0"
jinja2 = "^3.0.1"
prisma = "*"
pydantic = "*"
uvicorn = "^0.15.0"
weasyprint = "^53.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
